# terminal-chess

./: .gitignore  CMakeLists.txt  README.md  board.c  board.h  game.c  game.h  io.c  io.h  main.c  move.c  move.h  utils.h
include/: game.h  io.h  move.h  utils.h
src/: board.c  game.c  io.c  move.c  utils.c
